Fix Dark Mode bug

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -66,7 +66,6 @@ label {
     font-size: 0.9rem;
     margin-bottom: 0.5rem;
     color: #555;
-    /* display: block; */
     display: flex;
     justify-content: space-between;
 }
@@ -99,6 +98,11 @@ input[type="number"]:focus {
 
 input[type="checkbox"] {
     margin-right: 0.5rem;
+}
+
+input.dark-mode{
+    background-color: #333;
+    color: #ccc;
 }
 
 .checkbox-group {
@@ -262,6 +266,11 @@ select {
     font-size: 0.9rem;
 }
 
+select.dark-mode{
+    background-color: #333;
+    color: #ccc;
+}
+
 .sticky-button {
     position: absolute;
     bottom: 50px;
@@ -414,13 +423,11 @@ ol>li {
 }
 
 
-/* Basic styling for the container */
 .hint-container {
     position: relative;
     display: inline-block;
 }
 
-/* Styling the "i" button */
 .info-toggle {
     border: none;
     cursor: pointer;
@@ -430,14 +437,11 @@ ol>li {
     size: 18px;
 }
 
-/* Initially hide the info box */
 .info-box {
     visibility: hidden;
     position: absolute;
-    top: 40px;  /* Distance from button */
+    top: 40px; 
     right: 0;
-    /* background-color: #f1f1f1;
-    color: #333; */
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -448,7 +452,6 @@ ol>li {
     z-index: 5;
 }
 
-/* Show the info box when hovering over the button */
 .hint-container:hover .info-box {
     visibility: visible;
     opacity: 1;
